libnm/connection: Fix nested hashtable documentation

The GObject Introspection added support for using parenthesis in 1.39.0
https://bugzilla.gnome.org/show_bug.cgi?id=663190

Better use it to not collide with gtk-doc.